src/core/ir/jit/snapshots/tailcall__core__ir__jit__model__tests__multiple_operations.snap
---
source: src/core/ir/jit/model.rs
expression: plan
---
ExecutionPlan {
    fields: [
        Field {
            id: 0,
            name: "user",
            ir: "Some(..)",
            type_of: User,
            args: [
                Arg {
                    id: 0,
                    name: "id",
                    type_of: Int!,
                    value: Some(
                        Number(
                            Number(1),
                        ),
                    ),
                    default_value: None,
                },
            ],
        },
        Field {
            id: 1,
            name: "id",
            type_of: Int!,
            refs: Some(
                Parent(0),
            ),
        },
        Field {
            id: 2,
            name: "username",
            type_of: String!,
            refs: Some(
                Parent(0),
            ),
        },
        Field {
            id: 3,
            name: "posts",
            ir: "Some(..)",
            type_of: [Post],
        },
        Field {
            id: 4,
            name: "id",
            type_of: Int!,
            refs: Some(
                Parent(3),
            ),
        },
        Field {
            id: 5,
            name: "title",
            type_of: String!,
            refs: Some(
                Parent(3),
            ),
        },
    ],
}
