src/core/ir/jit/snapshots/tailcall__core__ir__jit__model__tests__unions.snap
---
source: src/core/ir/jit/model.rs
expression: plan
---
ExecutionPlan {
    fields: [
        Field {
            id: 0,
            name: "getUserIdOrEmail",
            ir: "Some(..)",
            type_of: UserIdOrEmail,
            args: [
                Arg {
                    id: 0,
                    name: "id",
                    type_of: Int!,
                    value: Some(
                        Number(
                            Number(1),
                        ),
                    ),
                    default_value: None,
                },
            ],
        },
    ],
}
